manifests/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - tmp.me
        - www.tmp.me
      secretName: tls
  rules:
    - host: tmp.me
      http:
        paths:
        - path: /jenkins
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port:
                number: 8081
    - host: www.tmp.me
      http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8081
